--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Lab2 - Tạ Huỳnh Đạt</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <div class="container">
   <!-- dòng header -->
@@ -71,6 +72,82 @@
     <h2>BUY ONLINE NOW & GET 10% OFF !</h2>
     <button type="button">Shop Now</button>
   </div>
+  <div class="clear"></div>
+  <!--form-->
+  <div class="contact">
+    <form id="form-contact">
+      <h2>for special request & order</h2>
+      <center><hr class="brown"> </center> 
+      <div class="contact-form contact-form-pcecial">
+         <label for="first-name">First name <sup>*</sup></label>
+         <br>
+         <input type="text" name="first-name">
+      </div>
+      <div class="contact-form contact-form-pcecial" id="last-name">
+        <label for="last-name">Last name <sup>*</sup></label>
+        <br>
+        <input type="text" name="last-name">
+      </div>
+      <div class="clear"></div>
+      <div class="contact-form">
+        <label for="email">Email <sup>*</sup></label>
+        <br>
+        <input type="text" name="email">
+      </div>
+      <div class="contact-form">
+        <label for="phone">Phone</label>
+        <br>
+        <input type="text" name="phone">
+      </div>
+      <div class="contact-form">
+        <label for="message">Message</label>
+        <br>
+        <textarea name="message"></textarea>
+      </div>
+      <div class="contact-form">
+        <input type="button" name="button" value="Send">
+      </div>
+    </form>
+  </div>
   </body>
+  <footer>
+    <div class="information">
+      <h2>our store</h2>
+      <h3>Address: 500 Terry Francois</h3>
+      <h3>Street San Francisco, CA 94158</h3>
+      <h3>Phone: 123-456-7890</h3>
+      <h3>Email: tadat216@gmail.com</h3>
+    </div>
+    <div class="information">
+      <h2>opening hours</h2>
+      <h3>Mon - Fri: 7am - 10pm</h3>
+      <h3>Saturday: 8am - 10pm</h3>
+      <h3>Sunday: 8am - 11pm</h3>
+    </div>
+    <div class="information">
+      <h2>help</h2>
+      <a href>Shipping and return</a>
+      <br>
+      <a href>Privacy Policy</a>
+      <br>
+      <a href>FAQ</a>
+    </div>
+    <div class="clear"></div>
+    <div class = "subcribe">
+      <center><h2>subcribe</h2></center>
+      <label for="user-email">Enter your email here <sup>*</sup></label>
+      <br>
+      <input type="text" name="user-email">
+      <input type="button" name="button" value="subcribe now!">
+      <div class="clear"></div>
+    </div>
+    <div clas = "clear"></div>
+    <center>
+    <a href="#" class="fa fa-facebook"></a>
+    <a href="#" class="fa fa-twitter"></a>
+    <a href="#" class="fa fa-pinterest"></a>
+    <a href="#" class="fa fa-instagram"></a>
+    </center>
+  </footer>
 </div>
 </html>
