--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -9,7 +9,7 @@
   <!-- dòng header -->
   <header>
     <ul>
-      <li class = "logo"><a href="#">prickles & co.</a></li>
+      <li class = "logo-brand"><a href="#">prickles & co.</a></li>
       <li><a href="#">Shop</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">FAQ</a></li>
